# stock_quant_backend

./: .env.example  .gitignore  CICD.md  DOWNLOAD.md  Dockerfile  README.md  alembic.ini  docker-compose.yml  entrypoint.sh  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
alembic/: env.py
alembic/versions/: 0001_initial.py  0002_screen_snapshots.py
app/: config.py  crud.py  db.py  download_xlsx.py  main.py  models.py  schemas.py  security.py
app/routers/: auth.py  download.py  ingest.py  records.py
deploy/: deploy_on_vm.sh  docker-compose.deploy.yml  setup_gcp.sh
tests/: conftest.py  test_auth.py  test_ingest_download.py  test_records.py
