[tool.poetry]
name = "stock-quant-userdata"
version = "0.1.0"
description = "Multi-user stock record backend (accounts + per-user stock records)."
authors = ["Vincent <jummy1124@gmail.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111"
uvicorn = { extras = ["standard"], version = "^0.30" }
sqlmodel = "^0.0.21"
sqlalchemy = "^2.0"
psycopg = { extras = ["binary"], version = "^3.1" }
alembic = "^1.13"
pyjwt = "^2.8"
passlib = { extras = ["bcrypt"], version = "^1.7" }
# passlib 1.7.4 is incompatible with bcrypt >= 4.1 (it removed `__about__` and now
# raises on the >72-byte probe passlib runs during backend init). Pin to the last
# compatible release, which still ships Python 3.11 wheels.
bcrypt = "~4.0.1"
pydantic-settings = "^2.2"
pydantic = { extras = ["email"], version = "^2.7" }

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
httpx = "^0.27"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
